# voice-assisant

./: .gitignore  CMakeLists.txt  README.md  audio-listener.py  main  main.cpp  status.py  statusbar-icon.c
cpp-headers/: assistant.h  audio_functions.h  date.h  helper_functions.h  parser.h
headers/: functions.h
python_files/: functions.py  speech.py
replies/: greet_replies.h  replies.h  replies_arrays.h
